fixed teaser images alignment

--- a/app/assets/stylesheets/plugins/mosaic.css.scss
+++ b/app/assets/stylesheets/plugins/mosaic.css.scss
@@ -17,7 +17,7 @@
 .mosaic-backdrop {
   img {
     position: absolute;
-    margin: 0px 100px 0px -100px;
+    /*margin: 0px 100px 0px -100px;*/
   }
   display:none;
   position:relative;
